test_suite/ui/missing_disciminant.stderr
error: Please add an explicit discriminant
 --> $DIR/missing_disciminant.rs:4:5
  |
4 |     OhNoTheresNoDiscriminant,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
